--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 dependencies = [
     "langchain",
-    "langchain_openai"
+    "langchain_openai",
 ]
 
 [project.urls]
